--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">practical_2_a</string>
     <string name="Toast_text">Toast</string>
     <string name="count_text">COUNT</string>
+    <string name="zero_text">ZERO</string>
     <string name="zero">0</string>
     <string name="toast_message">Yow Wei Hong 19WMD03251</string>
 </resources>
